WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102310
[chromium] WebGL texImage2D fails with deferred image decoding
https://bugs.webkit.org/show_bug.cgi?id=102310
Summary
[chromium] WebGL texImage2D fails with deferred image decoding
Hin-Chung Lam
Reported
2012-11-14 17:59:25 PST
When deferred image decoding is enabled WebGL's texImage2D using an Image object will fail. This is due to the fact that it generates an ImageFrame marked as incomplete which WebGL rejects.
Attachments
Patch
(6.17 KB, patch)
2012-11-14 18:09 PST
,
Hin-Chung Lam
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.17 KB, patch)
2012-11-15 10:47 PST
,
Hin-Chung Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hin-Chung Lam
Comment 1
2012-11-14 18:09:13 PST
Created
attachment 174307
[details]
Patch
James Robinson
Comment 2
2012-11-14 18:16:52 PST
Comment on
attachment 174307
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=174307&action=review
> LayoutTests/fast/images/webgl-teximage2d.html:1 > +<script src="../js/resources/js-test-pre.js"></script>
add a <!DOCTYPE html> before this
> LayoutTests/fast/images/webgl-teximage2d.html:2 > +<script src="../canvas/webgl/resources/webgl-test.js"></script>
why isn't this test in fast/canvas/webgl ?
James Robinson
Comment 3
2012-11-14 18:18:20 PST
Seems fairly reasonable to me, but I think Ken or Stephen are more familiar with this bit.
Hin-Chung Lam
Comment 4
2012-11-14 18:26:07 PST
I talked to Dirk about this. Since I want to run this test with --enable-deferred-image-decoding virtual suite there's a couple options: 1. Add a virtual suite that runs *one* test in fast/canvas/webgl 2. Copy the test from fast/canvas/webgl 3. Write a simple webgl test in fast/images that does exactly what I need I did just 3.
Kenneth Russell
Comment 5
2012-11-14 19:05:56 PST
Comment on
attachment 174307
[details]
Patch Looks good. Please make sure the WebGL conformance suite and the fast/canvas/webgl/ layout tests pass with --enable-deferred-image-decoding, as there are many other tests which already exercise this path, some potentially more strenuously. r=me
Stephen White
Comment 6
2012-11-15 08:22:42 PST
Comment on
attachment 174307
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=174307&action=review
I have no comments; will leave for Ken.
> Source/WebCore/ChangeLog:10 > + generates an ImageFrame marked as incompelte, which WebGL rejects. This results
incompelte -> incomplete
Kenneth Russell
Comment 7
2012-11-15 10:44:19 PST
Note: please mark the patch cq? (Details link) if you would like it submitted to the commit queue.
Hin-Chung Lam
Comment 8
2012-11-15 10:45:43 PST
(In reply to
comment #7
)
> Note: please mark the patch cq? (Details link) if you would like it submitted to the commit queue.
Thanks. I'll land this manually.
Hin-Chung Lam
Comment 9
2012-11-15 10:47:52 PST
Created
attachment 174486
[details]
Patch for landing
WebKit Review Bot
Comment 10
2012-11-15 12:36:14 PST
Comment on
attachment 174486
[details]
Patch for landing Clearing flags on attachment: 174486 Committed
r134816
: <
http://trac.webkit.org/changeset/134816
>
WebKit Review Bot
Comment 11
2012-11-15 12:36:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug