[chromium] WebGL texImage2D fails with deferred image decoding https://bugs.webkit.org/show_bug.cgi?id=102310

Reviewed by Kenneth Russell.

Source/WebCore:

Skia's implementation of GraphicsContext3D::getImageData() uses ImageSource
to decode an image. When deferred image decoding is enabled this class
generates an ImageFrame marked as incomplete, which WebGL rejects. This results
in failing of texImage2D.

This change uses ImageDecoder directly instead of ImageSource. This skips
the code path of deferred image decoding. This behavior is correct because
GraphicsContext3D wants to decode the image differently with alpha not
premultiplied and color profile applied optionally.

Added a test to prove this change fixed the bug.

Test: fast/images/webgl-teximage2d.html

* platform/graphics/skia/GraphicsContext3DSkia.cpp:
(WebCore::GraphicsContext3D::getImageData):

LayoutTests:

Added a test to exercise texImage2D with an Image object.

* fast/images/webgl-teximage2d-expected.txt: Added.
* fast/images/webgl-teximage2d.html: Added.


Canonical link: https://commits.webkit.org/120523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134816 268f45cc-cd09-0410-ab3c-d52691b4dbfc